<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_description2">Description2</string>
    <string name="title_activity_d3">d3</string>
    <string name="title_activity_edit_description">EditDescription</string>
    <string name="save_changes">Save Changes</string>
    <string name="name">Name</string>
    <string name="no_date">No date</string>
    <string name="later">Later</string>
    <string name="this_month">This Month</string>
    <string name="this_week">This Week</string>
    <string name="today">Today</string>
    <string name="overdue">Overdue</string>
    <string name="enter_task_here">Enter Task Here</string>
    <string name="enter_description">Enter Description</string>
    <string name="noDate">No Date</string>
</resources>
